--- a/web_rails/myapp/app/views/planning/show.html.erb
+++ b/web_rails/myapp/app/views/planning/show.html.erb
@@ -5,8 +5,8 @@
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th class="col-sm-5">聖地巡礼スケジュール名</th>
-              <th class="col-sm-5">作成日</th>
+              <th class="col-sm-6">聖地巡礼スケジュール名</th>
+              <th class="col-sm-3">作成日</th>
               <th class="col-sm-2">ダウンロード・削除</th>
             </tr>
           </thead>
@@ -19,7 +19,7 @@
               <% end %>
             </td>
             <td>
-              <%= pa.created_at.strftime("%Y/%m/%d %H:%M") %>
+              <%= pa.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
             </td>
             <td>
               <%= link_to plan_detail_path(format: :pdf, plan_id: pa.plan_id) , class:"btn btn-link btn-lg" do %>
