--- a/web_rails/myapp/app/views/spot/complete.html.erb
+++ b/web_rails/myapp/app/views/spot/complete.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '観光地を登録しました') %>
+<% provide(:title, '聖地を登録しました') %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
