--- a/web_rails/myapp/app/views/spot/edit.html.erb
+++ b/web_rails/myapp/app/views/spot/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, '観光地詳細編集') %>
-<h1>スポット情報編集</h1>
+<% provide(:title, '聖地詳細編集') %>
+<h1>聖地情報編集</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
