--- a/web_rails/myapp/app/views/spot/new.html.erb
+++ b/web_rails/myapp/app/views/spot/new.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, '観光地登録') %>
-<h1>観光地登録</h1>
+<% provide(:title, '聖地登録') %>
+<h1>聖地登録</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
