--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>
   <div>
-    <h1>さくれへようこそ！</h1>
+    <h1><span style="color:red">さくれ</span>へようこそ！</h1>
     <div class=row>
       <br>
       <div class="col-md-3">
