--- a/web_rails/myapp/app/views/users/edit.html.erb
+++ b/web_rails/myapp/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Profile Edit") %>
-<h1>Profile Edit</h1>
+<h1>プロフィール編集</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
