--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -90,7 +90,9 @@ input#product {
 }
 .btn-primary:hover {
   background-color: gray;
+  border-color: whitesmoke;
 }
 .btn-primary:focus {
   background-color: gray;
+  border-color: whitesmoke;
 }
