[Change] タイムラインの表示件数5件までに

--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -54,7 +54,7 @@ ul.ui-autocomplete {
 .with-nav-tabs.panel-search .nav-tabs > li.active > a:focus {
 	color: #333333;
 	background-color: #fff;
-	border-color: slategray;
+	border-color: whitesmoke;
 	border-bottom-color: transparent;
 }
 
