--- a/web_rails/myapp/app/views/favorite/_favorite.html.erb
+++ b/web_rails/myapp/app/views/favorite/_favorite.html.erb
@@ -1,17 +1,17 @@
 <% if current_user %>
     <div class="fav-link" id="fav-link-<%= detail.id %>">
     <% if !Favorite.exists?(user_id:current_user.id,spot_id:detail.id) %>
-        <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-link btn-sm" , remote: true do %>
-            <i class="glyphicon glyphicon-check">リストに追加</i>
+        <%= link_to fav_path(detail.id) , method: :post , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-star-empty" title="リストに追加"></i>
         <% end %>
     <% else %>
-        <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-link btn-sm" , remote: true do %>
-            <i class="glyphicon glyphicon-new-window">リストから外す</i>
+        <%= link_to unfav_path(detail.id),method: :delete , class:"btn btn-link btn-lg" , remote: true do %>
+            <i class="glyphicon glyphicon-star" style="color: #FFFF00" title="リストから外す"></i>
         <% end %>
     <% end %>
     </div>
 <% else %>
-    <%= link_to "#", class:"btn btn-link btn-sm disabled" , remote: true do %>
-        <i class="glyphicon glyphicon-new-window">リストに追加</i>
+    <%= link_to "#", class:"btn btn-link btn-lg disabled" , remote: true do %>
+        <i class="glyphicon glyphicon-new-window" title="リストに追加"></i>
     <% end %>
 <% end %>
