[Change] 背景色戻した

--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -21,7 +21,7 @@ html {
 
 body {
   font-family: 'Kosugi Maru', sans-serif;
-	background-color: lightyellow;
+	background-color: #eeeeee;
   padding-top: 60px;
   min-height: 100%;
   display: flex;
