--- a/web_rails/myapp/app/views/planning/index.html.erb
+++ b/web_rails/myapp/app/views/planning/index.html.erb
@@ -22,8 +22,10 @@
   <div class="col-md-10">
     <%= form_for @plan do |f| %>
       <table class="table table-striped table-bordered table-hover">
-        <%= f.label :"計画表の名前" %>
+        計画表の名前<span class="text-danger">（必須）</span>
         <%= f.text_field :plan_name, class: 'form-control' %>
+        計画表の詳細
+        <%= f.text_area :plan_detail, class: 'form-control' %>
         <%= f.nested_fields_for :plan_details, wrapper_tag: :tbody do |q| %>
           <tr>
             <td>日付<span class="text-danger">（必須）</span></td>
@@ -40,7 +42,7 @@
           <tr>
             <td>コメント</td>
             <td style="text-align: center;">
-              <%= q.text_field :comment, class: 'form-control' %>
+              <%= q.text_area :comment, class: 'form-control' %>
             </td>
           </tr>
           <tr>
