--- a/web_rails/myapp/app/views/planning/plan_pdf.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_pdf.html.erb
@@ -1,4 +1,5 @@
 <h1 style="text-align:center"><%= @plan_name %></h1>
+<h3 style="text-align:center"><%= @plan_detail %></h3>
 <ul class="cbp_tmtimeline">
   <li>
     <% @detail.each do |d| %>
