--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -17,7 +17,7 @@
 <% else %>
 </div>
   <div class="center jumbotron">
-    <h1>さくれへようこそ！</h1>
+    <h1><span style="color:red">さくれ</span>へようこそ！</h1>
     <h2>
       「さくれ」はあなたの観光を有意義なものにしてくれます！
     </h2>
@@ -57,14 +57,14 @@
           <div class="service-box mt-5 mx-auto">
             <i class="text-primary glyphicon glyphicon-list-alt" style="font-size: 80px"></i>
             <h3 class="mb-3">作成</h3>
-            <p class="text-muted mb-0">行きたい場所が決まれば巡礼表を作成！</p>
+            <p class="text-muted mb-0">行きたい場所が決まればスケジュール表を作成！</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="text-primary glyphicon glyphicon-globe" style="font-size: 80px"></i>
             <h3 class="mb-3">巡礼</h3>
-            <p class="text-muted mb-0">作った巡礼表を元に旅行しよう！</p>
+            <p class="text-muted mb-0">作ったスケジュール表を元に旅行しよう！</p>
           </div>
         </div>
       </div>
