--- a/web_rails/myapp/app/views/planning/complete.html.erb
+++ b/web_rails/myapp/app/views/planning/complete.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '計画表を作成しました') %>
+<% provide(:title, 'スケジュール表を作成しました') %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
