--- a/web_rails/myapp/app/views/search/_ranking.html.erb
+++ b/web_rails/myapp/app/views/search/_ranking.html.erb
@@ -1,7 +1,7 @@
 <% @spot = Spot.where('review_flag = ?',true).order('rate DESC').limit(10) %>
 
 <table class="table">
-  <h2 class="center">ランキング</h2>
+  <h2 class="center"><span style="color:#FFCC99">ランキング</span></h2>
   <% i = 1 %>
   <% @spot.each do |data| %>
     <tr>
