スポット名を聖地に変更

--- a/web_rails/myapp/app/views/planning/plan_detail.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_detail.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'スケジュール表詳細') %>
 <h1><%= @plan_name %></h1>
+<h2><%= @plan_detail %></h2>
 <ul class="cbp_tmtimeline">
   <li>
     <% @detail.each do |d| %>
