--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -54,7 +54,7 @@ ul.ui-autocomplete {
 .with-nav-tabs.panel-search .nav-tabs > li.active > a:focus {
 	color: #333333;
 	background-color: #fff;
-	border-color: slategray;
+	border-color: whitesmoke;
 	border-bottom-color: transparent;
 }
 
@@ -90,7 +90,9 @@ input#product {
 }
 .btn-primary:hover {
   background-color: gray;
+  border-color: whitesmoke;
 }
 .btn-primary:focus {
   background-color: gray;
+  border-color: whitesmoke;
 }
