--- a/web_rails/myapp/app/views/comment/_comment.html.erb
+++ b/web_rails/myapp/app/views/comment/_comment.html.erb
@@ -1,26 +1,34 @@
 <% comments.each do |comment| %>
-    <div style="border:#d0d0d0 solid 1px;" >
-        <%= link_to user_path(id: comment.user_id) do %>
-            <%= image_tag( comment.image_name.url , :size => "30x30" , :class => "rounded-circle") if comment.image_name? %>
-            <%= comment.user_name %>さん
-        <% end %>
-        <% unless !current_user || current_user.id != comment.user_id %>
-            <%= link_to uncomment_path(spot_id:comment.spot_id,comment_id:comment.id) , method: :delete , remote: true do %>
-                <i class="glyphicon glyphicon-trash"></i>
-            <% end %>
-        <% end %>
-        <p>
-        <% unless comment.images %>
-        <% else %>
+  <div class="col-md-6 col-md-offset-3">
+    <table class="table">
+      <tr>
+        <td style="text-align: center;vertical-align: middle;">
+          <% unless comment.images %>
+          <% else %>
             <% comment.images.each do |image| %>
-                <%= image_tag( "/uploads/comment/#{image}" , :size => "80x80" , :class => "rounded-circle") %>
+              <%= image_tag( "/uploads/comment/#{image}" , :size => "80x80" , :class => "rounded-circle") %>
             <% end %>
-        <% end %>
-        <br>
-        <%= comment.comment %> 
-        </p>
-        <div class="timestamp">
+          <% end %>
+        </td>
+        <td style="text-align: center;vertical-align: middle;">
+          <% unless !current_user || current_user.id != comment.user_id %>
+            <%= link_to uncomment_path(spot_id:comment.spot_id,comment_id:comment.id) , method: :delete , remote: true do %>
+              <i class="glyphicon glyphicon-trash"></i>
+            <% end %>
+          <% end %>
+          <p>
+          <%= link_to user_path(id: comment.user_id) do %>
+            <%= image_tag( comment.image_name.url , :size => "30x30" , :class => "img-circle") if comment.image_name? %>
+            <%= comment.user_name %>さん
+          <% end %>
+          <br>
+          <%= comment.comment %> 
+          </p>
+          <div class="timestamp">
             <%= time_ago_in_words(comment.updated_at) %>前
-        </div>
-    </div>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
