--- a/web_rails/myapp/app/views/rate/_rate.html.erb
+++ b/web_rails/myapp/app/views/rate/_rate.html.erb
@@ -1,18 +1,18 @@
 <% if current_user %>
 <div class="like-link" id="like-link-<%= detail.id %>">
     <% if !Rating.exists?(user_id:current_user.id,spot_id:detail.id) %>
-        <%= link_to rate_path(spot_id:detail.id) , method: :post , class:"btn btn-link btn-lg" , remote: true do %>
+        <%= link_to rate_path(spot_id:detail.id) , method: :post , class:"btn btn-default btn-lg" , remote: true do %>
             <i class="glyphicon glyphicon-heart-empty" title="いいねをつける"><%= detail.rate %></i>
         <% end %>
     <% else %>
-        <%= link_to unrate_path(spot_id:detail.id), method: :delete, class:"btn btn-link btn-lg", remote: true do %>
+        <%= link_to unrate_path(spot_id:detail.id), method: :delete, class:"btn btn-default btn-lg", remote: true do %>
             <i class="glyphicon glyphicon-heart" style="color: #FF00FF" title="いいねを外す"><%= detail.rate %></i>
 
         <% end %>
     <% end %>
 </div>
 <% else %>
-    <%= link_to "#", class:"btn btn-link btn-lg disabled" , remote: true do %>
+    <%= link_to "#", class:"btn btn-default btn-lg disabled" , remote: true do %>
         <i class="glyphicon glyphicon-heart" title="いいねをつける"><%= detail.rate %></i>
     <% end %>
 <% end %>
