--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -4,11 +4,13 @@
             <thead>
                 <tr>
                     <th scope="col">
-                        <% if @detail[0].images? %>
-                            <%= image_tag( @detail[0].images[0].url , :size => "150x150") %>
-                        <% else %>
-                            <%= image_tag("icon/NoImage.png", size: "150x150") %>
+                    <% unless @detail[0].images.blank? %>
+                        <% @detail[0].images.each do |image| %>
+                            <%= image_tag( image.url , :size => "150x150") %>
                         <% end %>
+                    <% else %>
+                        <%= image_tag("icon/NoImage.png", size: "150x150") %>
+                    <% end %>
                     </th>
                 </tr>
             </thead>
