[Change] スポット編集一覧画面の見た目変更

--- a/web_rails/myapp/app/views/users/show_spot.html.erb
+++ b/web_rails/myapp/app/views/users/show_spot.html.erb
@@ -57,7 +57,7 @@
             </div>
             <p class="text-muted" style="font-size: 14px;"><%= data.details %></p><br>
             <a class="btn-group">
-              <%= button_to "編集", { controller: 'spot', action: 'edit' }, {method: :get, params: {spot_id: data.id}, class: "btn btn-primary btn-sm"} %>
+              <%= button_to "編集", { controller: 'spot', action: 'edit' }, {method: :get, params: {spot_id: data.id}, class: "btn btn-primary"} %>
             </a>
             <%= render 'favorite/favorite' , detail: data%>
             <%= render 'rate/rate' , detail: data %>
