--- a/web_rails/myapp/app/views/static_pages/home.html.erb
+++ b/web_rails/myapp/app/views/static_pages/home.html.erb
@@ -16,11 +16,11 @@
   </div>
 <% else %>
 </div>
-  <div class="center jumbotron">
-    <h1>さくれへようこそ！</h1>
-    <h2>
+  <div class="center jumbotron" style="text-color:white;">
+    <h1><span style="color:white;">さくれ</span><span style="color:#EEEEEE;">へようこそ！</span></h1>
+    <h2><span style="color:#EEEEEE;">
       「さくれ」はあなたの観光を有意義なものにしてくれます！
-    </h2>
+    </span></h2>
     <%= link_to "アカウントを作成する", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
