--- a/web_rails/myapp/app/views/planning/plan_detail.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_detail.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, '計画表詳細') %>
+<% provide(:title, '聖地巡礼スケジュール表詳細') %>
 <h1><%= @plan_name %></h1>
 <h2><%= @plan_detail %></h2>
 <ul class="cbp_tmtimeline">
