--- a/web_rails/myapp/app/views/planning/show.html.erb
+++ b/web_rails/myapp/app/views/planning/show.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, '計画表一覧') %>
-  <h1>聖地巡礼スケジュール一覧</h1>
+  <h1>聖地巡礼スケジュール表一覧</h1>
       <div class="table-responsive">
         <% @plan = Plan.where(user_id: session[:user_id]) %>
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th class="col-sm-6">聖地巡礼スケジュール名</th>
+              <th class="col-sm-6">聖地巡礼スケジュール表名</th>
               <th class="col-sm-3">作成日</th>
               <th class="col-sm-2">ダウンロード・削除</th>
             </tr>
