--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -90,6 +90,13 @@ div .card-header {
   color: #fff !important;
   background-color: lightskyblue !important;
 }
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+  color: white;
+}
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
+  color: black;
+  background-color: whitesmoke;
+}
 
 .navbar-toggle {
   background-color: lightskyblue !important;
