--- a/web_rails/myapp/app/assets/stylesheets/rate.scss
+++ b/web_rails/myapp/app/assets/stylesheets/rate.scss
@@ -4,3 +4,23 @@
 .like-link{
     float: left;
 }
+
+.btn-danger {
+    color: #fff;
+    background-color: hotpink;
+    border-color: whitesmoke;
+}
+.btn-danger:hover, .btn-danger:focus, 
+.btn-danger:active, .btn-danger:active:focus, .btn-danger:active:hover, .btn-danger:active.focus,
+.btn-danger.active, .btn-danger.active:focus, .btn-danger.active:hover, .btn-danger.active.focus,
+.open > .dropdown-toggle.btn-danger, 
+.open > .dropdown-toggle.btn-danger:hover,
+.open > .dropdown-toggle.btn-danger:focus, 
+.open > .dropdown-toggle.btn-danger.focus,
+.btn-danger.disabled:hover, .btn-danger[disabled]:hover, fieldset[disabled] .btn-danger:hover,
+.btn-danger.disabled:focus, .btn-danger[disabled]:focus, fieldset[disabled] .btn-danger:focus,
+.btn-danger.disabled.focus, .btn-danger[disabled].focus, fieldset[disabled] .btn-danger.focus {
+    color: white;
+    background-color: orchid;
+    border-color: whitesmoke;
+}
