--- a/web_rails/myapp/app/views/layouts/application.html.erb
+++ b/web_rails/myapp/app/views/layouts/application.html.erb
@@ -15,9 +15,13 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-}
+  margin-bottom: 0px; 
+  }
+  
+
   </style>
   <body>
+    
     <%= render 'layouts/header' %>
   
     <div class="content">
