--- a/web_rails/myapp/app/views/search/search_detail.html.erb
+++ b/web_rails/myapp/app/views/search/search_detail.html.erb
@@ -25,7 +25,7 @@
         </td>
       </tr>
       <tr>
-        <th scope="row">スポット名：</th>
+        <th scope="row">聖地名：</th>
         <td><%= @detail[0].spot_name %></td>
       </tr>
       <tr>
