[Change] ボタン配置少し変更

--- a/web_rails/myapp/app/assets/stylesheets/custom.css.scss
+++ b/web_rails/myapp/app/assets/stylesheets/custom.css.scss
@@ -19,6 +19,10 @@ html {
   flex: 1;
 }
 
+.btn {
+  border: unset !important; 
+}
+
 body {
   font-family: 'Kosugi Maru', sans-serif;
 	background-color: #eeeeee;
