--- a/web_rails/myapp/app/views/layouts/_header.html.erb
+++ b/web_rails/myapp/app/views/layouts/_header.html.erb
@@ -46,7 +46,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Config", edit_user_path(current_user) %></li>
-              <li><%= link_to "Favorite", fav_show_path(user_id:current_user) %></li>
+              <li><%= link_to "List", fav_show_path(user_id:current_user) %></li>
               <li><%= link_to "Spot Edit", show_spot_path(user_id:current_user) %></li>
               <li class="divider"></li>
               <li>
