[Chane] 細かいデザイン変更

--- a/web_rails/myapp/app/assets/stylesheets/favorite.scss
+++ b/web_rails/myapp/app/assets/stylesheets/favorite.scss
@@ -21,7 +21,7 @@
 }
 
 
-.btn-tertiary.addlist.addlist {
+.btn-tertiary.addlist {
     background-color: dodgerblue;
     color: white;
     transition: .4s;
