--- a/web_rails/myapp/app/views/search/_ranking.html.erb
+++ b/web_rails/myapp/app/views/search/_ranking.html.erb
@@ -7,11 +7,11 @@
     <tr>
       <td style="text-align: center;vertical-align: middle;">
         <% if i == 1 %>
-          <span class="glyphicon glyphicon-king" style="color: #FFFF00"></span>
+          <span class="glyphicon glyphicon-king" style="color: goldenrod"></span>
         <% elsif i == 2 %>
-          <span class="glyphicon glyphicon-queen" style="color: #CCCCCC"></span>
+          <span class="glyphicon glyphicon-queen" style="color: gray"></span>
         <% elsif i == 3 %>
-          <span class="glyphicon glyphicon-pawn" style="color: #FF9966"></span>
+          <span class="glyphicon glyphicon-pawn" style="color: peru"></span>
         <% else %>
         <% end %>
       </td>
