--- a/web_rails/myapp/app/views/planning/plan_detail.html.erb
+++ b/web_rails/myapp/app/views/planning/plan_detail.html.erb
@@ -10,7 +10,9 @@
       </time>
       <div class="cbp_tmicon">
         <% @s = Spot.find_by(spot_name: d.spot_name) %>
-        <%= image_tag(@s.images[0].url, class: "img-thumbnail", size: 100) if @s.images? %>
+        <% if @s %>
+          <%= image_tag(@s.images[0].url, class: "img-thumbnail", size: 100) if @s.images? %>
+        <% end %>
       </div>
       <div class="cbp_tmlabel">
         <h2 style="color: #fff">
