--- a/web_rails/myapp/app/views/offer/index.html.erb
+++ b/web_rails/myapp/app/views/offer/index.html.erb
@@ -5,7 +5,7 @@
  
   <table class="table">
     <tr>
-      <th>名前<span class="text-danger">（必須）</span></th>
+      <th>企業名<span class="text-danger">（必須）</span></th>
       <td><%= f.text_field :name %></td>
     </tr>
     <tr>
@@ -13,7 +13,7 @@
       <td><%= f.text_field :email %></td>
     </tr>
     <tr>
-      <th>お問い合わせ内容</th>
+      <th>お問い合わせ内容<span class="text-danger">（必須）</span></th>
       <td><%= f.text_area :message %></td>
     </tr>
   </table>
