[Change] 詳細の店情報色変更

--- a/web_rails/myapp/app/assets/stylesheets/search.scss
+++ b/web_rails/myapp/app/assets/stylesheets/search.scss
@@ -102,3 +102,11 @@ input#product {
   background-color: gray;
   border-color: whitesmoke;
 }
+
+tr.shop_ad {
+  background-color: khaki !important;
+}
+
+th#shop_banner {
+  background-color: cadetblue;
+}
